2021. 5.17. Abolished zeo_delaunay2d from applications. [app]
2021. 5.17. Renamed zeo_delaunay2d to zeo_voronoi2d. [zeo, zeo_voronoi2d]
2021. 5.17. Added zVoronoi2D. [zeo_delaunay2d]
2021. 5.17. Added zDTTri2DListDestroy. [zeo_delaunay2d]
2021. 5.16. Reflected new specification of zFDouble. [zeo_render_color, zeo_vec2d, zeo_mat2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_frame3d, zeo_ph_ply, app]
2021. 5.15. Added zeo_delaunay2d. [app]
2021. 5.15. Corrected key for specular reflection in examples and zeo_qhull. [example, app]
2021. 5.15. Added zeo_delaunay2d and zDelaunay2D. [zeo, zeo_delaunay2d]
2021. 5.15. Added zTri2DPointIsInside. [zeo_elem2d]
2021. 5.15. Corrected mismatch between prototype and definition of zOBB3D and zOBB3DPL. [zeo_bv3d_obb]
2021. 5.15. Applied zTreeClass and zTreeClassMethod to zeo_vec3d_tree. [zeo_vec3d_tree, zeo_ph_stl]
2021. 5.12. Modified zTri3DPointIsInside. [zeo_elem3d]
2021. 5.12. Reimplemented zTri2DBarycenter, zTri2DCircumcenter, zTri2DIncenter and zTri2DOrthocenter. [zeo_elem2d]
2021. 5.12. Added zEdge2D class. [zeo_elem2d]
2021. 5.12. Reimplemented zTri3DBarycenter, zTri3DCircumcenter, zTri3DIncenter and zTri3DOrthocenter. [zeo_elem3d]
2021. 5.11. Modified zAABB3D, zAABB3DXform, zAABB3DPL and zAABB3DXformPL. [zeo_bv3d_aabb]
2021. 5.11. Added zAABox2D, zAABB2D and zAABB2DPL. [zeo_bv2d_aabb, zeo_bv2d]
2021. 5.11. Renamed zOBB and zOBBPL to zOBB3D and zOBB3DPL, respectively. [zeo_bv3d_obb]
2021. 5.11. Modified some examples for bounding volume. [example]
2021. 5. 9. Modified specification of zBDisk2D. [zeo_bv2d_bdisk]
2021. 5. 9. Modified specification of zVec2DAddrListCreate. [zeo_vec2d_list]
2021. 5. 9. Modified specification of zBBall3D. [zeo_bv3d_bball]
2021. 5. 9. Modified specification of _zPH3DSweepBottom, zPH3DPrism and zPH3DPyramid. [zeo_ph]
2021. 5. 9. Modified specification of zTriangulate. [zeo_elem3d_list]
2021. 5. 9. Modified specification of zVec3DAddrListCreate and zLoop3DCreate. [zeo_vec3d_list, zeo_elem3d_list]