@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.9.13
+VERSION=1.9.14
 
 DEPENDENCY="zeda=1.6.0;zm=1.3.9"
 
